# solar_module_f3

./: .mxproject  CMakeLists.txt  Makefile  README.md  openocd_stm.cfg  solar_module_f3.ioc  upload-app.sh
Inc/: main.h  measurement.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
Src/: main.c  measurement.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
